--- a/News.html
+++ b/News.html
@@ -15,9 +15,9 @@
 
     <!--////////nav bar start here///////////-->
 
-    <nav class="navbar navbar-expand-lg  ">
+    <nav class="navbar navbar-expand-lg " id="navHeader">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><span style="color: #A10035 ;">Trend</span>News</a>
+          <a class="navbar-brand" href="#"><span style="color: #A10035;">Trend</span>News</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -34,7 +34,7 @@
 <div class="all-cont">
 
 
-  <div>
+  <div id="demoHolder">
   <div id="demo1">
   </div>
 
