remove wrong classes

--- a/News.html
+++ b/News.html
@@ -43,16 +43,16 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-md-7 " style=" padding: 0;" >
+        <div class="" style=" padding: 0;" >
 
-          <div class="container  cart">
+          <div class="cart">
             <h1>Sports News</h1>
           </div>
           <div id="demo">
           </div>
         </div>
 
-        <div class="col-md-5 " style="">
+        <div class="col-md-5 ">
         </div>
       </div>
     </div>
