delete a non usage class

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="" style=" padding: 0;" >
+        <div style=" padding: 0;" >
 
           <div class="cart">
             <h1>Sports News</h1>
