Delete unnecessary code

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 
 
       <!--////////news list DOM initialised here///////////-->
-      <div class="container">
-        <div class="row">
-
+      <div id="container">
+        
           <div style=" padding: 0;">
             <div class="cart">
               <h1>Sports News</h1>
@@ -50,10 +49,6 @@
 
             </div>
           </div>
-
-          <div class="col-md-5">
-          </div>
-        </div>
       </div>
     </div>
   </div>
