Remove unnecessary styling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!--////////news list DOM initialised here///////////-->
       <div id="container">
         
-          <div style=" padding: 0;">
+          <div>
             <div class="cart">
               <h1>Sports News</h1>
             </div>
