--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
            
-            <form class="d-flex search-box ">
+            <form class="d-flex search-box" id="search">
               <input class="form-control me-2" type="search" placeholder="Search"  aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
