--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
            
             <form class="d-flex search-box" id="search">
-              <input class="form-control me-2" type="search" placeholder="Search"  aria-label="Search">
+              <input class="form-control me-2" type="search" placeholder="Search" id="search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
