--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             <div id="demo">
               
             </div>
+               <!-- the side ards ner th demo will display at the right of the site -->
+            <div class="sideCard" id="sideCards">
+
+            </div>
           </div>
       </div>
     </div>
