--- a/page.html
+++ b/page.html
@@ -20,6 +20,7 @@
         }
        .h1 h1{
          font-size: 35px; 
+           color: #A10035;
         }
         .h1 p{
             font-size: 20px;
@@ -42,7 +43,8 @@
         }
      @media only screen and (max-width: 600px)  {
             img{
-                width: 500px;
+               width: 370px;
+                height: 250px;
             }
             .h1 h1{
                 font-size: 25px;
@@ -58,7 +60,7 @@
         .summary{
             position: relative;
             left: 0%;
-            max-width: 500px;
+            max-width: 375px;
             font-kerning: normal;
             margin: 30px 0 30px 0;
             font-size: 20px;
