--- a/page.html
+++ b/page.html
@@ -43,7 +43,7 @@
         }
      @media only screen and (max-width: 600px)  {
             img{
-               width: 370px;
+               width: 100%;
                 height: 250px;
             }
             .h1 h1{
@@ -60,7 +60,7 @@
         .summary{
             position: relative;
             left: 0%;
-            max-width: 370px;
+            max-width: 100%;
             font-kerning: normal;
             margin: 30px 0 30px 0;
             font-size: 20px;
