--- a/page.html
+++ b/page.html
@@ -36,6 +36,7 @@
         .summary{
             position: relative;
             left: 19%;
+            text-align: center;
             width: 800px;
             font-kerning: normal;
             margin: 30px 0 30px 0;
@@ -60,6 +61,7 @@
         .summary{
             position: relative;
             left: 0%;
+            text-align: center;
             max-width: 100%;
             font-kerning: normal;
             margin: 30px 0 30px 0;
