--- a/page.html
+++ b/page.html
@@ -36,7 +36,7 @@
         .summary{
             position: relative;
             left: 19%;
-            text-align: center;
+            text-align: left;
             width: 800px;
             font-kerning: normal;
             margin: 30px 0 30px 0;
@@ -61,7 +61,7 @@
         .summary{
             position: relative;
             left: 0%;
-            text-align: center;
+            text-align: left;
             max-width: 100%;
             font-kerning: normal;
             margin: 30px 0 30px 0;
