--- a/page.html
+++ b/page.html
@@ -17,12 +17,14 @@
         }
         .h1{
             margin: 30px 0 50px 0;
+            font-family: sans-serif;
         }
        .h1 h1{
          font-size: 35px; 
            color: #A10035;
         }
         .h1 p{
+            font-family: sans-serif;
             font-size: 20px;
             font-weight: lighter;
             float: left;
@@ -36,6 +38,7 @@
         .summary{
             position: relative;
             left: 19%;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             text-align: left;
             width: 800px;
             font-kerning: normal;
