--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
           <div>
             <div class="cart">
-              <h1>Sports News</h1>
+              <h1>latest posts</h1>
             </div>
             <div id="demo">
               
