--- a/page.html
+++ b/page.html
@@ -35,7 +35,16 @@
       </nav>
       <br>
       <!--////////nav bar ends here///////////-->
+    <!--The data displayed in the webpage from image to the summary writing-->
+
     <div id="data"></div>
+
+    <!--The more news section starts-->
+    <h3 id="moreHeading">Discover more stories</h3>
+    <div id="knowMore" class="d-sm-flex justify-content-between">
+
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    
     <script src="pageScript.js"></script>
