defining the know more to wrap

--- a/page.html
+++ b/page.html
@@ -41,7 +41,7 @@
 
     <!--The more news section starts-->
     <h3 id="moreHeading">Discover more stories</h3>
-    <div id="knowMore" class="d-sm-flex justify-content-between">
+    <div id="knowMore" class="d-sm-flex justify-content-evenly flex-wrap">
 
     </div>
 
