--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <form class="d-flex search-box" style="z-index: 1;">
               <input class="form-control me-2" id="search" type="search" placeholder="Search"  aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
+                
+                <div id="searchResult" class="searchReasult">
+               
+                   </div> 
             </form>
           </div>
         </div>
