--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
               <input class="form-control me-2" id="search" type="search" placeholder="Search"  aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
                 
-                <div id="searchResult" class="searchReasult">
-               
-                   </div> 
+         <div id="searchResult" class="searchReasult">
+               <div id="result"></div>
+                   </div>  
             </form>
           </div>
         </div>
